--- a/The-Resort/accomodations.html
+++ b/The-Resort/accomodations.html
@@ -6,22 +6,38 @@
       <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
   <body>
+    <div class="container4">
  <u><center><h1>Accomodations</h1></center></u>
+
+
+ </div>
 <p3>5 star resort with valet parking, internet, bars all around, swimming pool you name it. Whatever you need you can guarantee we have it!!!!! </p3>
-  <center><img src="https://s3-us-west-2.amazonaws.com/jerry-uploads-prod/article/images/Valet%20parking.jpg" height="500px" width="750px" border=5 alt=""></center>
+<div class="column4">
+
+  <center>
+
+
+    <p><a href="./accomodations.html">Accomodations</a></p>
+    <p><a href="./activities.html">Activities</a></p>
+    <p><a href="./travel.html">Travel Arrangements</a></p>
+
+
+  <img src="https://dejpknyizje2n.cloudfront.net/marketplace/products/palm-tree-icon-silhouette-sticker-1540573423.2507784.png" width="200" height="200" alt="An image of Discord">
+
+
+    <p><a href="./contact.html">Contact Info</a></p>
+
+    <p> <a href="./cocktails.html">Cocktails</a></p>
+  </center>
+</div>
+  <center><img src="https://s3-us-west-2.amazonaws.com/jerry-uploads-prod/article/images/Valet%20parking.jpg" height="500px" width="500px" border=5 alt=""></center>
     <br>
       <center><img src="https://d2sdvaauesfb7j.cloudfront.net/room_renders/29322543-1563563692.jpeg" height="500px" width="750px" border=5 alt=""></center>
     <br>
   <center><img src="https://2486634c787a971a3554-d983ce57e4c84901daded0f67d5a004f.ssl.cf1.rackcdn.com/pueblo-bonito-resorts/media/Pueblo-Bonito-Sunset-Gallery-3-5a79fe19a0888.jpg" height="500px" width="750px" border=5 alt=""></center>
 <br>
   <br>
-    <a href="./the-Resort.html">Home Page</a>
-      <ul>
-        <li><a href="./accomodations.html">Accomodations</a></li>
-          <li><a href="./activities.html">Activities</a></li>
-        <li><a href="./cocktails.html">Cocktails</a></li>
-      <li><a href="./contact.html">Contact Info</a></li>
-     <li><a href="./travel.html">Travel Arrangements</a></li>
-  </ul>
+    <center><a href="./the-Resort.html">Home Page</a></center>
+
  </body>
 </html>
