--- a/The-Resort/The-Resort.html
+++ b/The-Resort/The-Resort.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>
-  <html lang="en" dir="ltr">
-    <head>
-      <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <meta charset="utf-8">
+<html lang="en" dir="ltr">
+
+<head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+  <meta charset="utf-8">
   <title></title>
 </head>
-  <body>
-      <u><center><h1>Micronesian Tax Haven</h1></center></u>
-        <br>
-      <center><img src="https://ihg.scene7.com/is/image/ihg/intercontinental-hayman-island-5745275919-2x1" alt="" height="650px" width="1000px"></center>
-      <br>
-    <center><div3><p2> The perfect place for all your swindling needs. Hide your fortunes in a luxrious, posh tropical paradise.</p2></div3></center>
-  <ul>
-<li><a href="./accomodations.html">Accomodations</a></li>
-  <li><a href="./activities.html">Activities</a></li>
-    <li><a href="./cocktails.html">Cocktails</a></li>
-  <li><a href="./contact.html">Contact Info</a></li>
- <li><a href="./travel.html">Travel Arrangements</a></li>
-</ul>
-<center><p1>The Micronesian Tax Haven is the best place to come spend your money and soak up the sun on our white sand beaches with a mojito in your hand.</p1></center>
-  </body>
+
+<body>
+  <p4>Welcome to...</p4>
+  <div class="container4">
+    <u>
+      <center>
+        <h1>Micronesian Tax Haven</h1>
+      </center>
+    </u>
+  </div>
+  <br>
+  <div class="column4">
+
+    <center>
+
+
+      <p><a href="./accomodations.html">Accomodations</a></p>
+      <p><a href="./activities.html">Activities</a></p>
+      <p><a href="./travel.html">Travel Arrangements</a></p>
+
+
+      <img src="https://dejpknyizje2n.cloudfront.net/marketplace/products/palm-tree-icon-silhouette-sticker-1540573423.2507784.png" width="200" height="200" alt="An image of Discord">
+
+
+      <p><a href="./contact.html">Contact Info</a></p>
+
+      <p> <a href="./cocktails.html">Cocktails</a></p>
+    </center>
+  </div>
+  <center><img src="https://ihg.scene7.com/is/image/ihg/intercontinental-hayman-island-5745275919-2x1" alt="" height="650px" width="1000px" border=5></center>
+  <br>
+  <div class="container4">
+    <center>
+      <div3>
+        <p2> The perfect place for all your swindling needs. Hide your fortunes in a luxrious, posh tropical paradise.</p2>
+      </div3>
+    </center>
+
+
+
+
+    <center>
+      <p1>The Micronesian Tax Haven is the best place to come spend your money and soak up the sun on our white sand beaches with a mojito in your hand.</p1>
+    </center>
+  </div>
+</body>
+
 </html>
