--- a/The-Resort/accomodations.html
+++ b/The-Resort/accomodations.html
@@ -5,39 +5,101 @@
         <title>accomodations</title>
       <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
-  <body>
-    <div class="container4">
- <u><center><h1>Accomodations</h1></center></u>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;}
+</style>
+      <body>
+        <h2 class="w3-center"></h2>
+        <div class="container4">
 
-
- </div>
-<p3>5 star resort with valet parking, internet, bars all around, swimming pool you name it. Whatever you need you can guarantee we have it!!!!! </p3>
-<div class="column4">
-
-  <center>
-
-
-    <p><a href="./accomodations.html">Accomodations</a></p>
-    <p><a href="./activities.html">Activities</a></p>
-    <p><a href="./travel.html">Travel Arrangements</a></p>
-
-
-  <img src="https://dejpknyizje2n.cloudfront.net/marketplace/products/palm-tree-icon-silhouette-sticker-1540573423.2507784.png" width="200" height="200" alt="An image of Discord">
-
-
-    <p><a href="./contact.html">Contact Info</a></p>
-
-    <p> <a href="./cocktails.html">Cocktails</a></p>
-  </center>
-</div>
-  <center><img src="https://s3-us-west-2.amazonaws.com/jerry-uploads-prod/article/images/Valet%20parking.jpg" height="500px" width="500px" border=5 alt=""></center>
-    <br>
-      <center><img src="https://d2sdvaauesfb7j.cloudfront.net/room_renders/29322543-1563563692.jpeg" height="500px" width="750px" border=5 alt=""></center>
-    <br>
-  <center><img src="https://2486634c787a971a3554-d983ce57e4c84901daded0f67d5a004f.ssl.cf1.rackcdn.com/pueblo-bonito-resorts/media/Pueblo-Bonito-Sunset-Gallery-3-5a79fe19a0888.jpg" height="500px" width="750px" border=5 alt=""></center>
+        <h3>Accomodations</h3>
+          </div>
 <br>
+<br>
+<center><p>Browse through the slideshow below to preview our room styles</p></center>
+<br>
+<br>
+<div class="container">
   <br>
-    <center><a href="./the-Resort.html">Home Page</a></center>
+        <div class="w3-content w3-display-container">
+          <img class="mySlides" src="img_1.jpg" style="width:100%">
+          <img class="mySlides" src="img_2.jpg" style="width:100%">
+          <img class="mySlides" src="img_3.jpg" style="width:100%">
+          <img class="mySlides" src="img_4.jpg" style="width:100%">
 
- </body>
+          <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+          <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+          <br>
+        </div>
+      </div>
+      <center><table>
+        <colgroup>
+          <col span="2" style="background-color:white">
+          <col style="background-color:yellow">
+        </colgroup>
+        <tr>
+          <th>Room Type</th>
+          <th>Per Day</th>
+          <th>Price</th>
+        </tr>
+        <tr>
+          <td>Beachman</td>
+          <td>1-2 hours</td>
+          <td>$153</td>
+        </tr>
+        <tr>
+          <td>Pirate</td>
+          <td>1</td>
+          <td>$249</td>
+        </tr>
+        <tr>
+          <td>Captain</td>
+          <td>1</td>
+          <td>$249</td>
+        </tr>
+        <tr>
+          <td>Admiral</td>
+          <td>1</td>
+          <td>$249</td>
+        </tr>
+      </table></center>
+
+      <br>
+      <br>
+      <div class="container4">
+      <center>
+         <p><a href="./accomodations.html">Accomodations</a></p>
+         <p><a href="./activities.html">Activities</a></p>
+         <p><a href="./travel.html">Travel Arrangements</a></p>
+      <img src="https://dejpknyizje2n.cloudfront.net/marketplace/products/palm-tree-icon-silhouette-sticker-1540573423.2507784.png" width="200" height="200" alt="An image of Discord">
+      <p><a href="./contact.html">Contact Info</a></p>
+      <p> <a href="./cocktails.html">Cocktails</a></p>
+      <a href="./the-Resort.html">Home</a>
+      <br>
+      <br>
+       </center>
+      </div>
+
+        <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
+
+        function plusDivs(n) {
+          showDivs(slideIndex += n);
+        }
+
+        function showDivs(n) {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          if (n > x.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = x.length}
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+          }
+          x[slideIndex-1].style.display = "block";
+        }
+        </script>
+
+  </body>
 </html>
